# surrealdb-demo

./: Cargo.toml
SQL/: get_started.surql
src/: main.rs
